implemented POST: /api/members
