# backend/src/controllers/api/mod.rs
@@ -9,6 +9,7 @@ pub fn routes() -> Vec<Route, Global>{
   routes![
     member::get_member,
     member::get_members,
+    member::post_members,
     role::get_role,
     role::get_roles,
   ]
