# backend/src/models.rs
@@ -1,7 +1,15 @@
+use crate::schema::{members};
+
 #[derive(Queryable)]
 pub struct Member {
   pub id: i32,
   pub name: String,
+}
+
+#[derive(Insertable)]
+#[table_name="members"]
+pub struct NewMember<'a>{
+  pub name: &'a String
 }
 
 #[derive(Queryable)]
